CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

INCLUDE(FindPkgConfig)

PKG_CHECK_MODULES(LIBUSB libusb-1.0)

SET(LEA6T_RTK_TOP ${CMAKE_CURRENT_LIST_DIR})

SET(LEA6T_RTK_TARGET_NAME LEA6T_RTK)

INCLUDE_DIRECTORIES(${LEA6T_RTK_TOP}/include)

AUX_SOURCE_DIRECTORY(${LEA6T_RTK_TOP}/src SRC_LIST)

PROJECT(${LEA6T_RTK_TARGET_NAME})

INCLUDE_DIRECTORIES(${LIBUSB_INCLUDE_DIRS})

ADD_LIBRARY(${LEA6T_RTK_TARGET_NAME} SHARED ${SRC_LIST})

TARGET_LINK_LIBRARIES(${LEA6T_RTK_TARGET_NAME} ${LIBUSB_LDFLAGS})
